--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-03 02:42 -->
+<!-- 2022-12-03 18:57 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,18 +45,18 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org953f96a">1. 笔记</a></li>
-<li><a href="#org064b83e">2. 推送</a></li>
-<li><a href="#org26354a5">3. Git</a></li>
-<li><a href="#org47dbdbf">4. XBox</a></li>
-<li><a href="#org1bf366b">5. Bilibili</a></li>
+<li><a href="#org59c83d7">1. 笔记</a></li>
+<li><a href="#org97b8758">2. 推送</a></li>
+<li><a href="#orgc99bd9d">3. Git</a></li>
+<li><a href="#orgb4fc711">4. XBox</a></li>
+<li><a href="#org55ee53c">5. Bilibili</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org953f96a" class="outline-2">
-<h2 id="org953f96a"><span class="section-number-2">1.</span> <a href="#org953f96a">笔记</a></h2>
+<div id="outline-container-org59c83d7" class="outline-2">
+<h2 id="org59c83d7"><span class="section-number-2">1.</span> <a href="#org59c83d7">笔记</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://github.com/xournalpp/xournalpp/">Xournal++</a> 支持数位板的开源笔记软件</li>
@@ -64,8 +64,8 @@
 </div>
 </div>
 
-<div id="outline-container-org064b83e" class="outline-2">
-<h2 id="org064b83e"><span class="section-number-2">2.</span> <a href="#org064b83e">推送</a></h2>
+<div id="outline-container-org97b8758" class="outline-2">
+<h2 id="org97b8758"><span class="section-number-2">2.</span> <a href="#org97b8758">推送</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -75,8 +75,8 @@
 </div>
 </div>
 
-<div id="outline-container-org26354a5" class="outline-2">
-<h2 id="org26354a5"><span class="section-number-2">3.</span> <a href="#org26354a5">Git</a></h2>
+<div id="outline-container-orgc99bd9d" class="outline-2">
+<h2 id="orgc99bd9d"><span class="section-number-2">3.</span> <a href="#orgc99bd9d">Git</a></h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -90,8 +90,8 @@
 </div>
 </div>
 
-<div id="outline-container-org47dbdbf" class="outline-2">
-<h2 id="org47dbdbf"><span class="section-number-2">4.</span> <a href="#org47dbdbf">XBox</a></h2>
+<div id="outline-container-orgb4fc711" class="outline-2">
+<h2 id="orgb4fc711"><span class="section-number-2">4.</span> <a href="#orgb4fc711">XBox</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器
@@ -102,8 +102,8 @@
 </div>
 </div>
 
-<div id="outline-container-org1bf366b" class="outline-2">
-<h2 id="org1bf366b"><span class="section-number-2">5.</span> <a href="#org1bf366b">Bilibili</a></h2>
+<div id="outline-container-org55ee53c" class="outline-2">
+<h2 id="org55ee53c"><span class="section-number-2">5.</span> <a href="#org55ee53c">Bilibili</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">BilibiliDown</a> 视频下载</li>
@@ -117,7 +117,7 @@
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-02 20:18</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-03 02:42</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-03 18:57</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/tools.org">content/collections/tools.org</a></td></tr>
 </table>
