--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-03 02:42 -->
+<!-- 2022-12-03 18:57 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org150880a">1. 暑假</a>
+<li><a href="#orgbdea323">1. 暑假</a>
 <ul>
-<li><a href="#org43b257b">1.1. 夏令营</a></li>
+<li><a href="#org61ae625">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org8c37943">2. 打工</a></li>
-<li><a href="#org2949396">3. 我的928</a>
+<li><a href="#orgbf9bd7a">2. 打工</a></li>
+<li><a href="#org192fdaf">3. 我的928</a>
 <ul>
-<li><a href="#orgfeae148">3.1. 928演唱会(bushi</a></li>
+<li><a href="#orgbbfb60a">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org09323fa">4. 他们的928</a></li>
-<li><a href="#org2757ff7">5. 总结</a></li>
+<li><a href="#org180e5df">4. 他们的928</a></li>
+<li><a href="#org04731e1">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="orgbe9b092">
+<figure id="org5855c22">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org150880a" class="outline-2">
-<h2 id="org150880a"><span class="section-number-2">1.</span> <a href="#org150880a">暑假</a></h2>
+<div id="outline-container-orgbdea323" class="outline-2">
+<h2 id="orgbdea323"><span class="section-number-2">1.</span> <a href="#orgbdea323">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-org43b257b" class="outline-3">
-<h3 id="org43b257b"><span class="section-number-3">1.1.</span> <a href="#org43b257b">夏令营</a></h3>
+<div id="outline-container-org61ae625" class="outline-3">
+<h3 id="org61ae625"><span class="section-number-3">1.1.</span> <a href="#org61ae625">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org8c37943" class="outline-2">
-<h2 id="org8c37943"><span class="section-number-2">2.</span> <a href="#org8c37943">打工</a></h2>
+<div id="outline-container-orgbf9bd7a" class="outline-2">
+<h2 id="orgbf9bd7a"><span class="section-number-2">2.</span> <a href="#orgbf9bd7a">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org2949396" class="outline-2">
-<h2 id="org2949396"><span class="section-number-2">3.</span> <a href="#org2949396">我的928</a></h2>
+<div id="outline-container-org192fdaf" class="outline-2">
+<h2 id="org192fdaf"><span class="section-number-2">3.</span> <a href="#org192fdaf">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orgfeae148" class="outline-3">
-<h3 id="orgfeae148"><span class="section-number-3">3.1.</span> <a href="#orgfeae148">928演唱会(bushi</a></h3>
+<div id="outline-container-orgbbfb60a" class="outline-3">
+<h3 id="orgbbfb60a"><span class="section-number-3">3.1.</span> <a href="#orgbbfb60a">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org37dd3b6">
+<figure id="org61cdecc">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org33efc0b">
+<figure id="orgc2a1546">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org09323fa" class="outline-2">
-<h2 id="org09323fa"><span class="section-number-2">4.</span> <a href="#org09323fa">他们的928</a></h2>
+<div id="outline-container-org180e5df" class="outline-2">
+<h2 id="org180e5df"><span class="section-number-2">4.</span> <a href="#org180e5df">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org2757ff7" class="outline-2">
-<h2 id="org2757ff7"><span class="section-number-2">5.</span> <a href="#org2757ff7">总结</a></h2>
+<div id="outline-container-org04731e1" class="outline-2">
+<h2 id="org04731e1"><span class="section-number-2">5.</span> <a href="#org04731e1">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-03 02:42</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-03 18:57</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
