--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-03 18:57 -->
+<!-- 2022-12-03 22:46 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,48 +46,48 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org4e744e3">1. 妙妙文章</a>
+<li><a href="#org98b9f07">1. 妙妙文章</a>
 <ul>
-<li><a href="#org6d6289d">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orgbe454ac">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org2f50200">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org459c330">1.4. 关于编辑器</a></li>
-<li><a href="#org880408d">1.5. 关于代码</a>
+<li><a href="#orgf9f55e5">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org28eaeae">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org609f5ad">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org1f2471d">1.4. 关于编辑器</a></li>
+<li><a href="#org979e599">1.5. 关于代码</a>
 <ul>
-<li><a href="#orgd4387a2">1.5.1. Lisp</a></li>
+<li><a href="#org85c4dc2">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org97dc240">1.6. 关于CPU</a></li>
-<li><a href="#orgf833ebe">1.7. 关于算法</a>
+<li><a href="#orgf24e1c0">1.6. 关于CPU</a></li>
+<li><a href="#org4456d45">1.7. 关于算法</a>
 <ul>
-<li><a href="#orgde2c55f">1.7.1. 关于随机</a></li>
+<li><a href="#org678d05b">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orge0da39f">1.8. 关于AI</a></li>
-<li><a href="#org9f2ca70">1.9. 关于软件</a>
+<li><a href="#org6c45d8f">1.8. 关于AI</a></li>
+<li><a href="#org9174cc4">1.9. 关于软件</a>
 <ul>
-<li><a href="#org5b917a5">1.9.1. SQLite</a></li>
+<li><a href="#orgdd39e23">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgbc50cc5">1.10. 关于workflow</a></li>
+<li><a href="#org13dc91e">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org5a51798">2. 棒棒视频</a>
+<li><a href="#orgb0d055a">2. 棒棒视频</a>
 <ul>
-<li><a href="#org52e749f">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org8d4f509">2.2. 迷因水母</a></li>
-<li><a href="#org8835ec6">2.3. 各种剧</a></li>
-<li><a href="#org7da5dc0">2.4. 电影</a></li>
+<li><a href="#orgfe23104">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org2f57a5a">2.2. 迷因水母</a></li>
+<li><a href="#orgcdb07fe">2.3. 各种剧</a></li>
+<li><a href="#orgec9da69">2.4. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgfe00e7f">3. 快乐游戏</a></li>
-<li><a href="#org095e8be">4. 宝藏博主</a></li>
-<li><a href="#org5c2ee5a">5. 有意思的</a>
+<li><a href="#org577fbb1">3. 快乐游戏</a></li>
+<li><a href="#orgbcbbbf6">4. 宝藏博主</a></li>
+<li><a href="#orgdea318f">5. 有意思的</a>
 <ul>
-<li><a href="#org0b8ebbf">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgd35125a">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org757119a">6. 我想玩的</a></li>
+<li><a href="#org8763af0">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -96,8 +96,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org4e744e3" class="outline-2">
-<h2 id="org4e744e3"><span class="section-number-2">1.</span> <a href="#org4e744e3">妙妙文章</a></h2>
+<div id="outline-container-org98b9f07" class="outline-2">
+<h2 id="org98b9f07"><span class="section-number-2">1.</span> <a href="#org98b9f07">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -432,7 +432,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orgd5547cd">
+<figure id="org44ca295">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -505,8 +505,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </ul>
 </div>
 
-<div id="outline-container-org6d6289d" class="outline-3">
-<h3 id="org6d6289d"><span class="section-number-3">1.1.</span> <a href="#org6d6289d">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-orgf9f55e5" class="outline-3">
+<h3 id="orgf9f55e5"><span class="section-number-3">1.1.</span> <a href="#orgf9f55e5">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -547,8 +547,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </div>
 </div>
 
-<div id="outline-container-orgbe454ac" class="outline-3">
-<h3 id="orgbe454ac"><span class="section-number-3">1.2.</span> <a href="#orgbe454ac">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org28eaeae" class="outline-3">
+<h3 id="org28eaeae"><span class="section-number-3">1.2.</span> <a href="#org28eaeae">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -582,8 +582,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org2f50200" class="outline-3">
-<h3 id="org2f50200"><span class="section-number-3">1.3.</span> <a href="#org2f50200">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org609f5ad" class="outline-3">
+<h3 id="org609f5ad"><span class="section-number-3">1.3.</span> <a href="#org609f5ad">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -617,8 +617,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org459c330" class="outline-3">
-<h3 id="org459c330"><span class="section-number-3">1.4.</span> <a href="#org459c330">关于编辑器</a></h3>
+<div id="outline-container-org1f2471d" class="outline-3">
+<h3 id="org1f2471d"><span class="section-number-3">1.4.</span> <a href="#org1f2471d">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -634,8 +634,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org880408d" class="outline-3">
-<h3 id="org880408d"><span class="section-number-3">1.5.</span> <a href="#org880408d">关于代码</a></h3>
+<div id="outline-container-org979e599" class="outline-3">
+<h3 id="org979e599"><span class="section-number-3">1.5.</span> <a href="#org979e599">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -660,8 +660,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgd4387a2" class="outline-4">
-<h4 id="orgd4387a2"><span class="section-number-4">1.5.1.</span> <a href="#orgd4387a2">Lisp</a></h4>
+<div id="outline-container-org85c4dc2" class="outline-4">
+<h4 id="org85c4dc2"><span class="section-number-4">1.5.1.</span> <a href="#org85c4dc2">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -684,8 +684,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org97dc240" class="outline-3">
-<h3 id="org97dc240"><span class="section-number-3">1.6.</span> <a href="#org97dc240">关于CPU</a></h3>
+<div id="outline-container-orgf24e1c0" class="outline-3">
+<h3 id="orgf24e1c0"><span class="section-number-3">1.6.</span> <a href="#orgf24e1c0">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -700,8 +700,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orgf833ebe" class="outline-3">
-<h3 id="orgf833ebe"><span class="section-number-3">1.7.</span> <a href="#orgf833ebe">关于算法</a></h3>
+<div id="outline-container-org4456d45" class="outline-3">
+<h3 id="org4456d45"><span class="section-number-3">1.7.</span> <a href="#org4456d45">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -720,8 +720,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgde2c55f" class="outline-4">
-<h4 id="orgde2c55f"><span class="section-number-4">1.7.1.</span> <a href="#orgde2c55f">关于随机</a></h4>
+<div id="outline-container-org678d05b" class="outline-4">
+<h4 id="org678d05b"><span class="section-number-4">1.7.1.</span> <a href="#org678d05b">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -735,8 +735,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orge0da39f" class="outline-3">
-<h3 id="orge0da39f"><span class="section-number-3">1.8.</span> <a href="#orge0da39f">关于AI</a></h3>
+<div id="outline-container-org6c45d8f" class="outline-3">
+<h3 id="org6c45d8f"><span class="section-number-3">1.8.</span> <a href="#org6c45d8f">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -746,8 +746,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org9f2ca70" class="outline-3">
-<h3 id="org9f2ca70"><span class="section-number-3">1.9.</span> <a href="#org9f2ca70">关于软件</a></h3>
+<div id="outline-container-org9174cc4" class="outline-3">
+<h3 id="org9174cc4"><span class="section-number-3">1.9.</span> <a href="#org9174cc4">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -758,8 +758,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org5b917a5" class="outline-4">
-<h4 id="org5b917a5"><span class="section-number-4">1.9.1.</span> <a href="#org5b917a5">SQLite</a></h4>
+<div id="outline-container-orgdd39e23" class="outline-4">
+<h4 id="orgdd39e23"><span class="section-number-4">1.9.1.</span> <a href="#orgdd39e23">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -773,8 +773,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgbc50cc5" class="outline-3">
-<h3 id="orgbc50cc5"><span class="section-number-3">1.10.</span> <a href="#orgbc50cc5">关于workflow</a></h3>
+<div id="outline-container-org13dc91e" class="outline-3">
+<h3 id="org13dc91e"><span class="section-number-3">1.10.</span> <a href="#org13dc91e">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -784,8 +784,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org5a51798" class="outline-2">
-<h2 id="org5a51798"><span class="section-number-2">2.</span> <a href="#org5a51798">棒棒视频</a></h2>
+<div id="outline-container-orgb0d055a" class="outline-2">
+<h2 id="orgb0d055a"><span class="section-number-2">2.</span> <a href="#orgb0d055a">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -844,8 +844,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org52e749f" class="outline-3">
-<h3 id="org52e749f"><span class="section-number-3">2.1.</span> <a href="#org52e749f">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgfe23104" class="outline-3">
+<h3 id="orgfe23104"><span class="section-number-3">2.1.</span> <a href="#orgfe23104">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -876,8 +876,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org8d4f509" class="outline-3">
-<h3 id="org8d4f509"><span class="section-number-3">2.2.</span> <a href="#org8d4f509">迷因水母</a></h3>
+<div id="outline-container-org2f57a5a" class="outline-3">
+<h3 id="org2f57a5a"><span class="section-number-3">2.2.</span> <a href="#org2f57a5a">迷因水母</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><p>
@@ -892,8 +892,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org8835ec6" class="outline-3">
-<h3 id="org8835ec6"><span class="section-number-3">2.3.</span> <a href="#org8835ec6">各种剧</a></h3>
+<div id="outline-container-orgcdb07fe" class="outline-3">
+<h3 id="orgcdb07fe"><span class="section-number-3">2.3.</span> <a href="#orgcdb07fe">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -917,8 +917,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org7da5dc0" class="outline-3">
-<h3 id="org7da5dc0"><span class="section-number-3">2.4.</span> <a href="#org7da5dc0">电影</a></h3>
+<div id="outline-container-orgec9da69" class="outline-3">
+<h3 id="orgec9da69"><span class="section-number-3">2.4.</span> <a href="#orgec9da69">电影</a></h3>
 <div class="outline-text-3" id="text-2-4">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -944,7 +944,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="org206d34a">
+<figure id="orga797f31">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -962,8 +962,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgfe00e7f" class="outline-2">
-<h2 id="orgfe00e7f"><span class="section-number-2">3.</span> <a href="#orgfe00e7f">快乐游戏</a></h2>
+<div id="outline-container-org577fbb1" class="outline-2">
+<h2 id="org577fbb1"><span class="section-number-2">3.</span> <a href="#org577fbb1">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -993,8 +993,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org095e8be" class="outline-2">
-<h2 id="org095e8be"><span class="section-number-2">4.</span> <a href="#org095e8be">宝藏博主</a></h2>
+<div id="outline-container-orgbcbbbf6" class="outline-2">
+<h2 id="orgbcbbbf6"><span class="section-number-2">4.</span> <a href="#orgbcbbbf6">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -1005,7 +1005,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="orgf06408f">
+<figure id="org061bbeb">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -1013,8 +1013,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org5c2ee5a" class="outline-2">
-<h2 id="org5c2ee5a"><span class="section-number-2">5.</span> <a href="#org5c2ee5a">有意思的</a></h2>
+<div id="outline-container-orgdea318f" class="outline-2">
+<h2 id="orgdea318f"><span class="section-number-2">5.</span> <a href="#orgdea318f">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1040,8 +1040,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org0b8ebbf" class="outline-3">
-<h3 id="org0b8ebbf"><span class="section-number-3">5.1.</span> <a href="#org0b8ebbf">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgd35125a" class="outline-3">
+<h3 id="orgd35125a"><span class="section-number-3">5.1.</span> <a href="#orgd35125a">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1053,8 +1053,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org757119a" class="outline-2">
-<h2 id="org757119a"><span class="section-number-2">6.</span> <a href="#org757119a">我想玩的</a></h2>
+<div id="outline-container-org8763af0" class="outline-2">
+<h2 id="org8763af0"><span class="section-number-2">6.</span> <a href="#org8763af0">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1077,7 +1077,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-02 20:41</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-03 18:57</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-03 22:46</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
