Update from https://github.com/thebesttv/eserver-static/commit/fcfd630cd3d4b83e5f2b3d23dbb088f97392ce42

--- a/content/emacs/org-hyperlink.html
+++ b/content/emacs/org-hyperlink.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-03 22:46 -->
+<!-- 2022-12-04 02:43 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Org-mode Hyperlinks</title>
@@ -47,13 +47,13 @@
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
 <li><a href="#hlinks">1. Headings</a></li>
-<li><a href="#org3a35ca2">2. Files</a></li>
-<li><a href="#org3c614fa">3. Named Elements</a></li>
-<li><a href="#orgadfb161">4. Dedicated Targets</a></li>
-<li><a href="#orgcf9fd85">5. Radio Targets</a></li>
+<li><a href="#org1b2d9b0">2. Files</a></li>
+<li><a href="#orgd333308">3. Named Elements</a></li>
+<li><a href="#org7ebdf37">4. Dedicated Targets</a></li>
+<li><a href="#org01cfc90">5. Radio Targets</a></li>
 <li><a href="#example-section">6. Something to Refer to</a>
 <ul>
-<li><a href="#org00016d8">6.1. A sub-section</a></li>
+<li><a href="#org3d82e11">6.1. A sub-section</a></li>
 </ul>
 </li>
 </ul>
@@ -87,8 +87,8 @@ Use <code>[[* Headings]]</code> to directly refer to the name of a heading.  Not
 that there's only one asterisk (<code>*</code>), no matter how deep the heading is.
 </p>
 <p class="verse">
-"<code>see Section [[* Named Elements]]</code>" &rarr; see Section <a href="#org3c614fa">3</a>;<br>
-"<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#org00016d8">sub-section</a>.<br>
+"<code>see Section [[* Named Elements]]</code>" &rarr; see Section <a href="#orgd333308">3</a>;<br>
+"<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#org3d82e11">sub-section</a>.<br>
 </p>
 
 <p>
@@ -97,8 +97,8 @@ Use <code>C-c C-o</code> to nevigate to the target, and <code>C-c &amp;</code> t
 </div>
 </div>
 
-<div id="outline-container-org3a35ca2" class="outline-2">
-<h2 id="org3a35ca2"><span class="section-number-2">2.</span> <a href="#org3a35ca2">Files</a></h2>
+<div id="outline-container-org1b2d9b0" class="outline-2">
+<h2 id="org1b2d9b0"><span class="section-number-2">2.</span> <a href="#org1b2d9b0">Files</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 You can go to a specific line in a file with by appending <code>::N</code> at the
@@ -108,8 +108,8 @@ does can't be exported to HTML.
 </div>
 </div>
 
-<div id="outline-container-org3c614fa" class="outline-2">
-<h2 id="org3c614fa"><span class="section-number-2">3.</span> <a href="#org3c614fa">Named Elements</a></h2>
+<div id="outline-container-orgd333308" class="outline-2">
+<h2 id="orgd333308"><span class="section-number-2">3.</span> <a href="#orgd333308">Named Elements</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Elements can be given a name:
@@ -137,7 +137,7 @@ Three main elements that can be named:
 
 <p>
 You can refer to named elements using <code>[[named source block]]</code>, e.g.
-Fig. <a href="#orgcca91cc">1</a>, Listing <a href="#orge8894fb">1</a>, and Table <a href="#org2732593">1</a>.
+Fig. <a href="#org9960846">1</a>, Listing <a href="#orgd2e6b87">1</a>, and Table <a href="#orgdd3121d">1</a>.
 </p>
 
 <p>
@@ -154,24 +154,24 @@ order to get proper numbering.
 </div>
 </div>
 
-<div id="outline-container-orgadfb161" class="outline-2">
-<h2 id="orgadfb161"><span class="section-number-2">4.</span> <a href="#orgadfb161">Dedicated Targets</a></h2>
+<div id="outline-container-org7ebdf37" class="outline-2">
+<h2 id="org7ebdf37"><span class="section-number-2">4.</span> <a href="#org7ebdf37">Dedicated Targets</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Dedicated targets can be used to refer to a paragraph or an item in a
 list.
 </p>
 <ul class="org-ul">
-<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#orgdafeed0">prefixed sentence</a></li>
+<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#org2243496">prefixed sentence</a></li>
 <li>unordered list:  <code>the [[unordered target]]^th in the list</code> &rarr;
-the <a href="#org4dd41d4">3</a><sup>th</sup> in the list</li>
-<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#org2be3abf">lalala</a></li>
+the <a href="#org5700bc9">3</a><sup>th</sup> in the list</li>
+<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#orgcceb806">lalala</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgcf9fd85" class="outline-2">
-<h2 id="orgcf9fd85"><span class="section-number-2">5.</span> <a href="#orgcf9fd85">Radio Targets</a></h2>
+<div id="outline-container-org01cfc90" class="outline-2">
+<h2 id="org01cfc90"><span class="section-number-2">5.</span> <a href="#org01cfc90">Radio Targets</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 A radio target radiates its position.  It is enclosed in three angular
@@ -181,14 +181,14 @@ brackets, e.g. <code>&lt;&lt;&lt;thebesttv&gt;&gt;&gt;</code> and <code>&lt;&lt;
 
 <p>
 When a radio target is defined, any occurence of that word (or the
-words) in the document, e.g. <a href="#org70b2b2e">thebesttv</a>, is automatically linked to the
+words) in the document, e.g. <a href="#org8c09b32">thebesttv</a>, is automatically linked to the
 originating target.  This can be used for linking all the occurences of
-a terminology with its definition.  See the song of "<a href="#orgffd7dd8">do re me</a>".
+a terminology with its definition.  See the song of "<a href="#org7be39a4">do re me</a>".
 </p>
 
 <p>
 See the manual: <a href="https://orgmode.org/manual/Radio-Targets.html">4.3 Radio Targets</a>.
-Again, <a href="#org70b2b2e">thebesttv</a> and <a href="#orgffd7dd8">do re me</a>.
+Again, <a href="#org8c09b32">thebesttv</a> and <a href="#org7be39a4">do re me</a>.
 </p>
 </div>
 </div>
@@ -217,29 +217,29 @@ This word---&#8203;<span style="text-decoration: underline;">&lt;&lt;&lt;thebest
 </div>
 
 <p>
-<a id="orgdafeed0"></a> This is a sentence prefixed with a <i>dedicated target</i>.
+<a id="org2243496"></a> This is a sentence prefixed with a <i>dedicated target</i>.
 </p>
 
 <ul class="org-ul">
 <li>unordered list</li>
 <li>some item</li>
-<li><a id="org4dd41d4"></a> target in an unordered list</li>
+<li><a id="org5700bc9"></a> target in an unordered list</li>
 </ul>
 
 
 <ol class="org-ol">
 <li>ordered list</li>
-<li><a id="org2be3abf"></a> target in an ordered list</li>
+<li><a id="orgcceb806"></a> target in an ordered list</li>
 </ol>
 
 <p>
-This word&#x2014;<a id="org70b2b2e">thebesttv</a>&#x2014;is a radio target.
-<a id="orgffd7dd8">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
+This word&#x2014;<a id="org8c09b32">thebesttv</a>&#x2014;is a radio target.
+<a id="org7be39a4">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
 </p>
 </div>
 
-<div id="outline-container-org00016d8" class="outline-3">
-<h3 id="org00016d8"><span class="section-number-3">6.1.</span> <a href="#org00016d8">A sub-section</a></h3>
+<div id="outline-container-org3d82e11" class="outline-3">
+<h3 id="org3d82e11"><span class="section-number-3">6.1.</span> <a href="#org3d82e11">A sub-section</a></h3>
 <div class="outline-text-3" id="text-6-1">
 <div class="org-src-container">
 <pre class="src src-org"><span style="text-decoration: underline;">{{{image(30)}}}</span>
@@ -264,20 +264,20 @@ This word&#x2014;<a id="org70b2b2e">thebesttv</a>&#x2014;is a radio target.
 </div>
 
 
-<figure id="orgcca91cc">
+<figure id="org9960846">
 <img src="../daily/2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="30%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>sample image</figcaption>
 </figure>
 
 <div class="org-src-container">
-<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="orge8894fb">(<span style="font-weight: bold;">let</span> ((x 2))
+<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="orgd2e6b87">(<span style="font-weight: bold;">let</span> ((x 2))
   (coderef)
   (1+ x))
 </pre>
 </div>
 
-<table id="org2732593">
+<table id="orgdd3121d">
 <caption class="t-above"><span class="table-number">&#34920;1&nbsp;</span> sample table</caption>
 
 <colgroup>
@@ -312,10 +312,10 @@ This word&#x2014;<a id="org70b2b2e">thebesttv</a>&#x2014;is a radio target.
 </div>
 <div id="postamble" class="status">
 <hr><table class="postamble">
-  <tr><td class="org-right">Author</td><td class="org-left"><a href="#org70b2b2e">thebesttv</a></td></tr>
+  <tr><td class="org-right">Author</td><td class="org-left"><a href="#org8c09b32">thebesttv</a></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-22 20:15</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-03 22:44</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-03 22:46</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-04 02:43</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/emacs/org-hyperlink.org">content/emacs/org-hyperlink.org</a></td></tr>
 </table>
