--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-03 22:46 -->
+<!-- 2022-12-04 02:43 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,18 +45,18 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org4b8a393">1. 笔记</a></li>
-<li><a href="#org12a011f">2. 推送</a></li>
-<li><a href="#orgafa541a">3. Git</a></li>
-<li><a href="#orgb278b5c">4. XBox</a></li>
-<li><a href="#org5dce393">5. Bilibili</a></li>
+<li><a href="#orgd94eb14">1. 笔记</a></li>
+<li><a href="#orga3bd4c1">2. 推送</a></li>
+<li><a href="#org27011f4">3. Git</a></li>
+<li><a href="#orgf563b7f">4. XBox</a></li>
+<li><a href="#org830c754">5. Bilibili</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org4b8a393" class="outline-2">
-<h2 id="org4b8a393"><span class="section-number-2">1.</span> <a href="#org4b8a393">笔记</a></h2>
+<div id="outline-container-orgd94eb14" class="outline-2">
+<h2 id="orgd94eb14"><span class="section-number-2">1.</span> <a href="#orgd94eb14">笔记</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://github.com/xournalpp/xournalpp/">Xournal++</a> 支持数位板的开源笔记软件</li>
@@ -64,8 +64,8 @@
 </div>
 </div>
 
-<div id="outline-container-org12a011f" class="outline-2">
-<h2 id="org12a011f"><span class="section-number-2">2.</span> <a href="#org12a011f">推送</a></h2>
+<div id="outline-container-orga3bd4c1" class="outline-2">
+<h2 id="orga3bd4c1"><span class="section-number-2">2.</span> <a href="#orga3bd4c1">推送</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -75,8 +75,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgafa541a" class="outline-2">
-<h2 id="orgafa541a"><span class="section-number-2">3.</span> <a href="#orgafa541a">Git</a></h2>
+<div id="outline-container-org27011f4" class="outline-2">
+<h2 id="org27011f4"><span class="section-number-2">3.</span> <a href="#org27011f4">Git</a></h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -90,8 +90,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgb278b5c" class="outline-2">
-<h2 id="orgb278b5c"><span class="section-number-2">4.</span> <a href="#orgb278b5c">XBox</a></h2>
+<div id="outline-container-orgf563b7f" class="outline-2">
+<h2 id="orgf563b7f"><span class="section-number-2">4.</span> <a href="#orgf563b7f">XBox</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器
@@ -102,8 +102,8 @@
 </div>
 </div>
 
-<div id="outline-container-org5dce393" class="outline-2">
-<h2 id="org5dce393"><span class="section-number-2">5.</span> <a href="#org5dce393">Bilibili</a></h2>
+<div id="outline-container-org830c754" class="outline-2">
+<h2 id="org830c754"><span class="section-number-2">5.</span> <a href="#org830c754">Bilibili</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">BilibiliDown</a> 视频下载</li>
@@ -117,7 +117,7 @@
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-02 20:18</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-03 22:46</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-04 02:43</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/tools.org">content/collections/tools.org</a></td></tr>
 </table>
