--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-03 22:46 -->
+<!-- 2022-12-04 02:43 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -46,12 +46,12 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org004bb52">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#org075ee95">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#org0372478">1.1. window config &amp; register</a></li>
-<li><a href="#orgd17bf38">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#orgb120495">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#org81298f7">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#org9d494c7">1.1. window config &amp; register</a></li>
+<li><a href="#org99a7b51">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#org9926eab">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#org37b90fd">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -59,12 +59,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org004bb52" class="outline-2">
-<h2 id="org004bb52"><span class="section-number-2">1.</span> <a href="#org004bb52">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-org075ee95" class="outline-2">
+<h2 id="org075ee95"><span class="section-number-2">1.</span> <a href="#org075ee95">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org0372478" class="outline-3">
-<h3 id="org0372478"><span class="section-number-3">1.1.</span> <a href="#org0372478">window config &amp; register</a></h3>
+<div id="outline-container-org9d494c7" class="outline-3">
+<h3 id="org9d494c7"><span class="section-number-3">1.1.</span> <a href="#org9d494c7">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -78,8 +78,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-orgd17bf38" class="outline-3">
-<h3 id="orgd17bf38"><span class="section-number-3">1.2.</span> <a href="#orgd17bf38"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-org99a7b51" class="outline-3">
+<h3 id="org99a7b51"><span class="section-number-3">1.2.</span> <a href="#org99a7b51"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -102,8 +102,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgb120495" class="outline-3">
-<h3 id="orgb120495"><span class="section-number-3">1.3.</span> <a href="#orgb120495"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-org9926eab" class="outline-3">
+<h3 id="org9926eab"><span class="section-number-3">1.3.</span> <a href="#org9926eab"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -116,8 +116,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org81298f7" class="outline-3">
-<h3 id="org81298f7"><span class="section-number-3">1.4.</span> <a href="#org81298f7"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-org37b90fd" class="outline-3">
+<h3 id="org37b90fd"><span class="section-number-3">1.4.</span> <a href="#org37b90fd"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -136,7 +136,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-03 22:46</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-04 02:43</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
