--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-03 22:46 -->
+<!-- 2022-12-04 02:43 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org244f9ea">1. What is Vectored IO</a></li>
-<li><a href="#org9ebc320">2. Vectored IO in Linux</a></li>
-<li><a href="#orgbfccdbd">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#org8488184">4. Examples</a>
+<li><a href="#orgf69ace3">1. What is Vectored IO</a></li>
+<li><a href="#org16aad60">2. Vectored IO in Linux</a></li>
+<li><a href="#org0047199">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#org07e44b9">4. Examples</a>
 <ul>
-<li><a href="#org2856e0c">4.1. <code>write()</code></a></li>
-<li><a href="#orgec258ab">4.2. <code>writev()</code></a></li>
+<li><a href="#org2e108ce">4.1. <code>write()</code></a></li>
+<li><a href="#orgc574b82">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-org244f9ea" class="outline-2">
-<h2 id="org244f9ea"><span class="section-number-2">1.</span> <a href="#org244f9ea">What is Vectored IO</a></h2>
+<div id="outline-container-orgf69ace3" class="outline-2">
+<h2 id="orgf69ace3"><span class="section-number-2">1.</span> <a href="#orgf69ace3">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-org9ebc320" class="outline-2">
-<h2 id="org9ebc320"><span class="section-number-2">2.</span> <a href="#org9ebc320">Vectored IO in Linux</a></h2>
+<div id="outline-container-org16aad60" class="outline-2">
+<h2 id="org16aad60"><span class="section-number-2">2.</span> <a href="#org16aad60">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-orgbfccdbd" class="outline-2">
-<h2 id="orgbfccdbd"><span class="section-number-2">3.</span> <a href="#orgbfccdbd">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-org0047199" class="outline-2">
+<h2 id="org0047199"><span class="section-number-2">3.</span> <a href="#org0047199">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-org8488184" class="outline-2">
-<h2 id="org8488184"><span class="section-number-2">4.</span> <a href="#org8488184">Examples</a></h2>
+<div id="outline-container-org07e44b9" class="outline-2">
+<h2 id="org07e44b9"><span class="section-number-2">4.</span> <a href="#org07e44b9">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org2856e0c" class="outline-3">
-<h3 id="org2856e0c"><span class="section-number-3">4.1.</span> <a href="#org2856e0c"><code>write()</code></a></h3>
+<div id="outline-container-org2e108ce" class="outline-3">
+<h3 id="org2e108ce"><span class="section-number-3">4.1.</span> <a href="#org2e108ce"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-orgec258ab" class="outline-3">
-<h3 id="orgec258ab"><span class="section-number-3">4.2.</span> <a href="#orgec258ab"><code>writev()</code></a></h3>
+<div id="outline-container-orgc574b82" class="outline-3">
+<h3 id="orgc574b82"><span class="section-number-3">4.2.</span> <a href="#orgc574b82"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,7 +207,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-03 22:46</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-04 02:43</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
